# anti-deysis

./: .gitignore  Cargo.toml  README.md
src/: main.rs
src/app/: event_loop.rs  exit.rs  init.rs  mod.rs
src/app/screens/: account_selector.rs  blank.rs  home.rs  loading.rs  login.rs  mod.rs  prompt.rs
src/app/screens/home/: enter_code.rs
src/app/screens/loading/: modern.rs
src/requests/: check_auth.rs  gen_coords.rs  get_user_details.rs  join_class.rs  login.rs  mod.rs  refresh_token.rs
src/utils/: config.rs  initialize_client.rs  mod.rs  save_cookies.rs
