[package]
name = "deysisfucker"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.12.23", features = ["json", "cookies"] }
reqwest_cookie_store = "0.9.0"
cookie_store = "0.22.0"
serde_json = "1.0.145"
serde_yml = "0.0.12"
serde = "1.0.228"
sqlite = "0.37.0"
tokio = { version = "1.47.1", features = ["full"] }
ratatui = "0.29.0"
crossterm = "0.29.0"
async-trait = "0.1.89"
futures = "0.3.31"
rand = "0.10.0-rc.0"
log = "0.4.28"
